Apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: evilla
    labels:
       tipo: desarrollo
