Apps/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    labels:
      app: app
spec:
    selector:
        matchLabels:
            app: app
            tier: frontend
    replicas: 7
    template:
       metadata:
            labels:
                app: app
                tier: frontend
       spec:
            containers:
             - name: app-php
               image: unalatadefrijoles/laravel
