Apps/service-app.yaml
apiVersion: v1
kind: Service
metadata: 
    name: apache-svc
    labels:
        app: app
        tier: frontend
spec:
    type: NodePort
    ports:
    - port: 8080
    selector:
        app: app
        tier: frontend
