Apps/service-db.yaml
apiVersion: v1
kind: Service
metadata: 
    name: mysql-svc
    labels:
        app: db
        tier: backend
spec:
    type: NodePort
    ports:
    - port: 3306
      targetPort: 3306
    selector:
        app: db
        tier: backend
