Apps/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
   
spec:
  rules:
    - host: app.evilla.com  
      http:   
        paths:
          - path: /   
            pathType: Prefix   
            backend:  
              service:   
                name: frontend   
                port:   
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: web2
                port:
                  number: 8080
