Apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-appweb
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
    - host: app.evillae.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
                service:
                    name: apache-svc
                    port:
                       number: 8080
